--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,18 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+     </div>
+    <div class="collapse navbar-collapse" id="myNavbar">
+     </div>
+  </div>
+</nav>
   <app-root>Loading...</app-root>
 </body>
 </html>
