--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <nav class="navbar navbar-inverse">
+  <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
      </div>
@@ -19,6 +19,6 @@
   </div>
 </nav>
   <app-root>Loading...</app-root>
-    
+
 </body>
 </html>
